welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
  var colors = new Array[Colors] (getWorldHeight())
  for(i <- 1 to getWorldHeight() + 1){
    colors(i) = getGroundColor()
    forward()
  }
}